# agentic-RAG-toolkit

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  rxconfig.py
api/: bot_registry.py  chatbot_interface.py  pdf_rag_bot.py  server.py
chroma_data/: chroma.sqlite3
configs/: free_pdf_bot.yaml  main.yaml
reflex.lock/: package.json
src/agents/: nodes.py  routers.py
src/components/llms/: gemini_wrapper.py  openai_wrapper.py
src/components/retrievers/: chroma_wrapper.py  gemini_chroma_wrapper.py
src/core/: base_llm.py  base_vector_db.py  state.py
src/flows/: rag_graph.py
src/utils/: factory.py
tests/: chat_bot.py  ingest_pdf.py  toolkit_test.ipynb
ui/: ui.py
