[project]
name = "my-agentic-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.5",
    "onnxruntime<1.24.0",
    "protobuf==3.20.3",
    "pypdf>=6.14.2",
    "pyyaml>=6.0.3",
]
